--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,6 +8,9 @@ $white-color: #fff;
 body {
   background-image: url(../assets/background-2.jpg);
   background-size: cover;
+  @media screen and (max-width: 767px) {
+    background-size: inherit;
+  }
 }
 
 // Search
