--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,6 +9,8 @@ body {
   background-image: url(../assets/background-2.jpg);
   background-size: cover;
   margin: 0;
+  font-family: 'Proxima Nova';
+  font-weight: bold;
   @media screen and (max-width: 767px) {
     background-size: inherit;
   }
@@ -33,8 +35,8 @@ body {
   max-width: 980px;
 
   @media screen and (max-width: 767px) {
-  margin: 30px auto 30px;
-   width: 98%;
+   margin: 0 auto 30px;
+   width: 100%;
   }
 
   &__tab {
@@ -54,7 +56,7 @@ body {
       a {
         color: $white-color;
         display: block;
-        font-size: 20px;
+        font-size: 18px;
         padding: 10px 30px;
         text-decoration: none;
       }
@@ -121,7 +123,8 @@ body {
               width: 100%;
               span {
                 display: block;
-                margin-bottom: 6px;
+                margin-bottom: 4px;
+                font-size: 14px;
               }
               input {
                 background: $white-color;
@@ -133,6 +136,8 @@ body {
                 outline: 0;
                 padding: 12px;
                 width: -webkit-fill-available;
+                font-family: 'Proxima Nova';
+                font-size: bold;
               }
             }
           }
@@ -160,10 +165,12 @@ body {
                 width: 100%;
                 span {
                   display: block;
-                  margin-bottom: 6px;
+                  margin-bottom: 4px;
+                  font-size: 14px;
                 }
                 input {
-                  background: $white-color;
+                  background: $white-color url(assets/ico-calendar-disabled.svg) no-repeat;
+                  background-position: 93% 10px;
                   border: 1px solid #e1e1e1;
                   border-radius: 3px;
                   color: $blue-color;
@@ -200,7 +207,8 @@ body {
 
               span {
                 display: block;
-                margin-bottom: 6px;
+                margin-bottom: 4px;
+                font-size: 14px;
               }
               select {
                 background: $dark-blue-color;
@@ -212,9 +220,6 @@ body {
                 outline: 0;
                 padding: 10px 6px;
                 width: 100%;
-                @media screen and (max-width: 767px) {
-                  font-size: 11px;
-                }
 
                 &:active, &:focus {
                   border: 2px solid $orange-color;
@@ -222,7 +227,8 @@ body {
               }
               small {
                 display: block;
-                margin-top: 5px;
+                margin-top: 3px;
+                font-size: 12px;
               }
             }
 
@@ -319,3 +325,75 @@ body {
     }
   }
 }
+
+// Calendar
+
+amp-date-picker[mode=overlay] .amp-date-picker-calendar-container {
+  top: calc(100% + 66px);
+  left: 50%;
+  margin-left: -159px;
+}   
+
+.CalendarMonth_caption {
+  color: #fff;
+  background: #ffa600;
+  padding: 8px 0;
+  margin: 0 -30px 21px;
+}
+
+.CalendarMonth_caption > * {
+  font-weight: bold;
+  font-size: 15px;
+}
+
+.DayPickerNavigation_button__horizontal {
+  top: 6px;
+}
+
+.DayPicker_weekHeader {
+  color: #7d7d7d;
+  background: #ebebeb;
+  top: 40px;
+  padding: 0px 23px;
+  margin-left: -10px;
+}
+
+.DayPicker_weekHeader li {
+  font-weight: bold;
+}
+
+.amp-date-picker-resize-bug .DayPicker_transitionContainer {
+  min-height: 300px;
+}
+
+.CalendarDay__selected_start {
+  background-color: #0164bf;
+  border: 1px solid #0164bf;
+}
+
+.CalendarDay__selected_end {
+  background: #ffa600;
+  border: 1px solid #ffa600;
+}
+
+.CalendarDay__hovered_span, 
+.CalendarDay__hovered_span:hover, 
+.CalendarDay__selected_span, 
+.CalendarDay__selected_span:active, 
+.CalendarDay__selected_span:hover {
+  background-color: #f7f7f7;
+  border: 1px solid #f7f7f7;
+}
+
+[type="range"] .amp-date-picker-selecting {
+  border-bottom-color: #b60845;
+  color: #b60845;
+}
+
+.align-content-center,
+.align-content-center .amp-date-picker-calendar-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+} 
