--- a/scss/main.scss
+++ b/scss/main.scss
@@ -362,7 +362,7 @@ amp-date-picker[mode=overlay] .amp-date-picker-calendar-container {
   font-weight: bold;
 }
 
-.amp-date-picker-resize-bug .DayPicker_transitionContainer {
+.DayPicker_transitionContainer {
   min-height: 300px;
 }
 
