--- a/scss/main.scss
+++ b/scss/main.scss
@@ -257,10 +257,11 @@ body {
       border-radius: 0 0 3px 3px;
       color: #fff;
       cursor: pointer;
+      display: block;
       font-size: 18px;
       font-weight: bold;
-      padding: 10px;
-      width: 100%;
+      padding: 14px 10px;
+      text-align: center;
       &:hover {
         background: rgba(121, 186, 37, 1);
       }
