Correção de background-image

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,7 +6,7 @@ $orange-color: #ef6600;
 $white-color: #fff;
 
 body {
-  background-image: url(../assets/background-2.jpg);
+  background-image: url(./assets/background-2.jpg);
   background-size: cover;
   margin: 0;
   font-family: 'Proxima Nova';
