--- a/scss/main.scss
+++ b/scss/main.scss
@@ -129,7 +129,7 @@ body {
               }
               input {
                 background: $white-color;
-                border: 1px solid #e1e1e1;
+                border: 2px solid transparent;
                 border-radius: 3px;
                 color: $blue-color;
                 font-size: 13px;
@@ -139,6 +139,10 @@ body {
                 width: -webkit-fill-available;
                 font-family: 'Proxima Nova';
                 font-size: bold;
+
+                &:focus {
+                  border: 2px solid #ffa600;
+                }
               }
             }
 
@@ -159,12 +163,10 @@ body {
                   background: rgba(1, 100, 191,.1);
                 }
               }
-              &.hidden-origin, &.hidden-destination {
+              &.hidden {
                 display: none;
               }
-            }
-
-            
+            }           
           }
 
           &__destination {
@@ -196,7 +198,7 @@ body {
                 input {
                   background: $white-color url(assets/ico-calendar-disabled.svg) no-repeat;
                   background-position: 93% 10px;
-                  border: 1px solid #e1e1e1;
+                  border: 2px solid transparent;
                   border-radius: 3px;
                   color: $blue-color;
                   font-size: 13px;
@@ -204,6 +206,10 @@ body {
                   outline: 0;
                   padding: 12px;
                   width: -webkit-fill-available;
+
+                  &:focus {
+                    border: 2px solid #ffa600;
+                  }
                 }
               }
             }
